fix: fix Topic reply's picture overflow

--- a/src/routes/topic/Topic.scss
+++ b/src/routes/topic/Topic.scss
@@ -1,3 +1,10 @@
 .content {
   overflow-x: auto;
 }
+
+.reply {
+  img {
+    display: inline;
+    max-width: 100%;
+  }
+}
